force-app/main/default/objects/TAG_Meeting_Updates__c/TAG_Meeting_Updates__c.object-meta.xml
<CustomObject>
    <label>TAG Meeting Updates</label>
    <nameField>
        <label>RGC Meeting Updates</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TAG Meeting Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>