force-app/main/default/objects/TAG_Meeting_Updates__c/fields/Discussion_Topic__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Topic__c</fullName>
    <label>Discussion Topic [LEGACY]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>