force-app/main/default/objects/TAG_Meeting_Updates__c/fields/Discussion_TopicRT__c.field-meta.xml
<CustomField>
    <fullName>Discussion_TopicRT__c</fullName>
    <label>Discussion Topic</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>