force-app/main/default/objects/TAG_Meeting_Updates__c/fields/Link_to__c.field-meta.xml
<CustomField>
    <fullName>Link_to__c</fullName>
    <label>Link to Discussion Slides</label>
    <type>Url</type>
</CustomField>