force-app/main/default/objects/TAG_Meeting_Updates__c/fields/Link_to_Meeting_Summary__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Meeting_Summary__c</fullName>
    <label>Link to Meeting Summary [LEGACY]</label>
    <type>Url</type>
</CustomField>