force-app/main/default/objects/TAG_Meeting_Updates__c/fields/Link_to_Meeting_Summary_RT__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Meeting_Summary_RT__c</fullName>
    <label>Link to Meeting Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>