force-app/main/default/objects/TAG_Meeting_Updates__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Meeting Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ad hoc Meeting</fullName>
            </value>
            <value>
                <fullName>Aging TAG</fullName>
            </value>
            <value>
                <fullName>Auditory TAG</fullName>
            </value>
            <value>
                <fullName>Connective Tissue Diseases TAG</fullName>
            </value>
            <value>
                <fullName>CV/F TAG</fullName>
            </value>
            <value>
                <fullName>Data Architecture and Engineering</fullName>
            </value>
            <value>
                <fullName>Immune/Respiratory TAG</fullName>
            </value>
            <value>
                <fullName>Infectious Disease TAG</fullName>
            </value>
            <value>
                <fullName>M&amp;M TAG</fullName>
            </value>
            <value>
                <fullName>MAGICS TAG</fullName>
            </value>
            <value>
                <fullName>Neuroscience TAG</fullName>
            </value>
            <value>
                <fullName>Oncology TAG</fullName>
            </value>
            <value>
                <fullName>Ophthalmology TAG</fullName>
            </value>
            <value>
                <fullName>Production Genomics</fullName>
            </value>
            <value>
                <fullName>RGC High Priority Topics</fullName>
            </value>
            <value>
                <fullName>RGC Weekly Review</fullName>
            </value>
            <value>
                <fullName>ROAD to Target Discovery</fullName>
            </value>
            <value>
                <fullName>Working Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>