force-app/main/default/objects/TAG_Meeting_Updates__c/fields/Meeting_Summary_Link__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Summary_Link__c</fullName>
    <formula>HYPERLINK( Link_to_Meeting_Summary__c , &quot;Link to Meeting Summary&quot;,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Summary Link</label>
    <type>Text</type>
</CustomField>