force-app/main/default/objects/TAG_Meeting_Updates__c/fields/Sharepoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_URL__c</fullName>
    <label>Sharepoint URL</label>
    <type>Url</type>
</CustomField>