force-app/main/default/objects/TAG_Meeting_Updates__c/fields/TAG_Sub_Projects__c.field-meta.xml
<CustomField>
    <fullName>TAG_Sub_Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAG Sub Projects</label>
    <referenceTo>TAG_Sub_Project__c</referenceTo>
    <relationshipLabel>TAG Meeting Updates</relationshipLabel>
    <relationshipName>TAG_Meeting_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>