force-app/main/default/objects/TAG_Meeting_Updates__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>