force-app/main/default/objects/TAG_Meeting_Updates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Meeting__c</columns>
    <columns>Therapeutic_Area__c</columns>
    <columns>Discussion_TopicRT__c</columns>
    <columns>Date__c</columns>
    <columns>Link_to_Meeting_Summary_RT__c</columns>
    <columns>Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>