force-app/main/default/objects/TAG_Meeting_Updates__c/listViews/Upcoming_Meetings.listView-meta.xml
<ListView>
    <fullName>Upcoming_Meetings</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Link_to_Meeting_Summary_RT__c</columns>
    <columns>Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>Upcoming Meetings</label>
</ListView>